kubernetes/apps/infrastructure/emqx/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: simple-icons:emqx
    gethomepage.dev/name: EMQX
    gethomepage.dev/group: infrastructure
spec:
  hostnames: ["emqx.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx-dashboard
          port: 18083
